# ui_agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
aidlc-docs/: aidlc-state.md  audit.md
docs/: architecture.html
docs/plans/: 2026-02-28-ui-agent-improvements.md
src/: config.py  main.py
src/agents/: data_generator.py  field_mapper.py  form_filler.py  page_analyzer.py  result_verifier.py
src/browser/: browser_manager.py
src/flow/: form_test_flow.py  page_crew.py
src/models/: __init__.py  page_result.py  report.py  test_case.py
src/parsers/: csv_parser.py  excel_parser.py  json_parser.py  nl_parser.py  parser_factory.py  yaml_parser.py
src/reporting/: html_report.py  json_report.py
src/tools/: __init__.py  checkbox_tool.py  click_button_tool.py  date_picker_tool.py  dom_extractor_tool.py  field_result_collector.py  fill_input_tool.py  screenshot_analysis_tool.py  screenshot_tool.py  select_option_tool.py  upload_file_tool.py  validation_error_tool.py
src/utils/: logging.py
templates/: report.html
test_data/: demoqa_nl_test.txt  demoqa_practice_form.json  multi_step_form.json  multi_step_registration.yaml  sample_test.csv  sample_test.json  sample_test.yaml
test_server/: app.py
tests/: conftest.py  test_cli.py  test_config.py
tests/test_agents/: test_data_generator.py
tests/test_e2e/: test_e2e_flow.py
tests/test_flow/: test_flow.py
tests/test_parsers/: test_parsers.py
tests/test_reporting/: test_reporting.py
(+16 files in other folders)
